--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "flag-icons": "^6.6.6",
+    "round-flag-icons": "^1.3.0",
+    "unix-timestamp": "^1.0.2"
   }
 }
